@@ -49,7 +49,7 @@ EXPOSE 8080
 
 USER om-webserver
 
-CMD java -jar ${WORKSPACE}/target/om-webserver.jar --spring.config.location=${APPLICATION_PATH} \
-    -add-opens java.base/java.util=ALL-UNNAMED \
-    -add-opens java.base/java.lang=ALL-UNNAMED \
-    -add-opens java.base/java.lang.reflect=ALL-UNNAMED
+CMD java --add-opens java.base/java.util=ALL-UNNAMED \
+         --add-opens java.base/java.lang=ALL-UNNAMED \
+         --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
+         -jar ${WORKSPACE}/target/om-webserver.jar --spring.config.location=${APPLICATION_PATH}
